--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,5 @@ pluginManagement {
 }
 
 plugins {
-    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.7.0'
 }
-
-rootProject.name = 'iwanttocraft'
